Sat Dec 27 16:28:48 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c, man/tripplite_usb.8: Fix man page description (as
   in previous changeset) for tripplite_usb, and reword part of introduction.
   (No code changes, only comments.)

Sat Dec 27 16:17:34 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - man/libupsclient-config.8, man/powerpanel.8, man/richcomm_usb.8: normalize
   the dash between the program name and the one-line description.

Wed Dec 24 14:32:42 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - configure.in: 2.4.0-pre1

Wed Dec 24 14:13:52 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - NEWS, README, UPGRADING: first update round for 2.4.0.
 
Wed Dec 24 13:47:21 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - drivers/bcmxcp.c: remove the experimental tag, to the profit of stable, as
   per the maintainer comment (Kjell Claesson), and bump the driver release. 
 
Wed Dec 24 13:26:31 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - man/powerman-pdu.8: add a configuration example to illustrate the use of
   the "port" in ups.conf

Wed Dec 24 13:12:42 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

- clients/upsclient.h: remove the backward compatibility for client application,
  through the "UPSCONN" typedef. Developers must now use "UPSCONN_t" for the
  client structure, as advertized since NUT 2.2.1.

Wed Dec 24 12:53:22 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - docs/configure.txt: missing bump of the date, from the previous commit
 - docs/macros.txt: add the missing documentation for NUT_CHECK_LIBPOWERMAN and
   NUT_CHECK_OS

Wed Dec 24 12:24:35 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 * final removal of the energizerups driver (broken):
   - drivers/energizerups.c, man/energizerups.8, m4/nut_check_hiddev.m4: removed
   - configure.in, data/driver.list, docs/macros.txt, docs/configure.txt,
     drivers/Makefile.am, man/Makefile.am, man/nutupsdrv.8: updated
